--- a/views/templates/toolbars/kt_login_toolbar.html
+++ b/views/templates/toolbars/kt_login_toolbar.html
@@ -4,7 +4,7 @@
         <span flex=""></span>
         <span>
             <md-menu  md-position-mode="target-right target" md-offset="-20 40">
-                <md-button style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
+                <md-button ng-disabled="true" style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
                     <md-icon class="material-icons">more_vert</md-icon>
                 </md-button>
                 <md-menu-content width="3" class="blackground">
@@ -21,7 +21,7 @@
     <span flex=""></span>
     <span>
             <md-menu  md-position-mode="target-right target" md-offset="-20 40">
-                <md-button style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
+                <md-button ng-disabled="true" style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
                     <md-icon class="material-icons">more_vert</md-icon>
                 </md-button>
                 <md-menu-content width="3" class="blackground">
