--- a/views/templates/kt_dashboard_fab.html
+++ b/views/templates/kt_dashboard_fab.html
@@ -1,4 +1,4 @@
-<md-fab-speed-dial md-open="isFabOpen" md-direction="up" class="md-scale md-fab-bottom-right ">
+<md-fab-speed-dial ng-if="!isError" md-open="isFabOpen" md-direction="up" class="md-scale md-fab-bottom-right ">
     <md-fab-trigger>
         <md-button aria-label="menu" class="md-fab ">
             <md-icon class="material-icons" >build</md-icon>
@@ -17,3 +17,12 @@
         </md-button>
     </md-fab-actions>
 </md-fab-speed-dial>
+
+<md-fab-speed-dial ng-if="isError" md-open="isFabOpen" md-direction="up" class="md-scale md-fab-bottom-right ">
+    <md-fab-trigger>
+        <md-button class="md-fab" ng-click="refresh()">
+            <md-icon class="material-icons" >refresh</md-icon>
+        </md-button>
+    </md-fab-trigger>
+</md-fab-speed-dial>
+
